Fix up the home page alignment now that it uses the global masthead.

--- a/app/assets/stylesheets/components/home.css.scss
+++ b/app/assets/stylesheets/components/home.css.scss
@@ -1,5 +1,9 @@
 // Home
 
+.home {
+  @include pad(top, large);
+}
+
 .home__my-games-heading,
 .home__games-hosting-heading,
 .home__all-games-heading {
